    sent (Closes: #339657)
  * bts: submitter and reassign accept multiple bug numbers (Closes:
    #237726)
  * bts: document "it" for referring to previous bug number
  * debchange: provide -m/--maintmaint switch to use the maintainer name
    from the most recent changelog entry rather than using the environment
    variables (Closes: #232000)
  * debuild: improve examples in manpage (Closes: #326881)
  * dpkg-depcheck: completely rewrite symlink handling code to fix bug
    where /usr was a symlink (Closes: #246006)

 -- Julian Gilbey <jdg@debian.org>  Fri,  2 Dec 2005 00:23:02 +0000

devscripts (2.9.9) unstable; urgency=low

  [ Filippo Giunchedi ]
  * uscan: add option to set LWP timeout, patch by Stephen Quinney
    (Closes: #335181)

  [ Julian Gilbey ]
  * bts: fix handling of arguments to show command; translate "tag:..."
    into "include=..." when given as a second argument (Closes: #338171)
  * bts: don't treat something like "bts close #123456" as a comment
    (Closes: #337737)
  * debchange: reapply --edit patch from bug#234434 (Closes: #336632)
  * debcommit: fix version grepping in changelog parsing (Closes: #336025)
  * debdiff: add --quiet switch and set exit status according to diff
    status (Closes: #337829)
  * debuild: improve grammar of usage message

  [ Joey Hess ]
  * bts: sleep a default of 5 seconds between bts cache downloads
    to avoid hammering the underprovisioned debian BTS/master archive server.
  * bts: add --cache-delay parameter to tune this

 -- Joey Hess <joeyh@debian.org>  Mon, 21 Nov 2005 10:46:49 -0500

devscripts (2.9.8) unstable; urgency=low

  [ Julian Gilbey ]
  * bts: don't require user for usertags (Closes: #326560)
  * bts: fix manpage typos (Closes: #328972, #328974, #328477)
  * bts: fix bug in getting timestamps
  * debdiff: handle filenames with spaces (Closes: #334145)
  * debdiff: compare symlinks more carefully (Closes: #327090)
  * dd-list: support displaying uploaders with new --uploaders/-u option